2025-12-10_kubernetes/lab0/workspace/sealed_secrect_example/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sealed-secret-example
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: sealed-secret-example
  template:
    metadata:
      labels:
        app: sealed-secret-example
    spec:
      containers:
        - name: main
          image: ghcr.io/sikalabs/hello-world-server
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
