2025-12-10_kubernetes/lab0/workspace/sealed_secrect_example/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sealed-secret-example
spec:
  selector:
    app: sealed-secret-example
  ports:
    - port: 80
      targetPort: 8000
